Update dev tool

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
   </li>
 </ul>
  -->
- <mat-toolbar color="primary">
-  NGRX Workshop
+<mat-toolbar color="warn">
+  Hello NgRx
 </mat-toolbar>
 <router-outlet></router-outlet>
