--- a/src/app/search-results/search-results.component.html
+++ b/src/app/search-results/search-results.component.html
@@ -1,9 +1,9 @@
 <div class="books">
   <mat-card *ngFor="let book of books" class="book">
-    <mat-card-title-group>
-      <img mat-card-sm-image *ngIf="book.volumeInfo.imageLinks?.smallThumbnail" [src]="book.volumeInfo.imageLinks?.smallThumbnail"
-      />
-      <mat-card-title>{{ book.volumeInfo.title }}</mat-card-title>
-    </mat-card-title-group>
+    <img mat-card-image *ngIf="book.volumeInfo.imageLinks?.smallThumbnail" [src]="book.volumeInfo.imageLinks?.smallThumbnail">
+      <mat-card-header>
+        <mat-card-title>{{ book.volumeInfo.title }}</mat-card-title>
+        <mat-card-subtitle>{{ displayAuthor(book.volumeInfo.authors) }}</mat-card-subtitle>
+      </mat-card-header>
   </mat-card>
 </div>
